[package]
name = "perseus-website-example-app-in-a-file"
version = "0.4.0-beta.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = { version = "=0.4.0-beta.22", features = [ "hydrate" ] }
sycamore = "^0.8.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
perseus-tailwind = "0.4.6"

[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-axum = { version = "=0.4.0-beta.22", features = [ "dflt-server" ] }

[target.'cfg(client)'.dependencies]
reqwasm = "0.4"
serde = { version = "1", features = [ "derive" ] }
gloo-storage = "0.2.2"